[tool.poetry]
name = "lido"
version = "1.1.0"
description = "Network helpers for Lido"
authors = ["Lido <info@lido.fi>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/lidofinance/lido-python"
homepage = "https://lido.fi"

[tool.poetry.dependencies]
python = ">3.7.1,<4"
web3 = "^5.15.0"
py-ecc = "^5.1.0"
ssz = "^0.2.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100